[tool.poetry]
name = "lernado"
version = "0.1.0"
description = ""
authors = ["Kazunari Kaizu <kwaizu@gmail.com>"]
readme = "README.md"
# package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
numpy = "^2.0.0"
scikit-learn = "^1.5.0"
gpytorch = "^1.12"
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
